@@ -104,6 +104,7 @@ class DictionaryInfoTest(unittest.TestCase):
 		for dictionary in dicts:
 			if dictionary.language == u"dk":
 				self.assertEquals(info2.description, dictionary.description)
+				self.assertEquals(u"standard", dictionary.variant)
 				return
 		self.fail(u"Should have found dk dictionary")
 
